--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Scotch Player</title>
   </head>
   <body>
-    <div id="content">
+    <div id="root">
 
     </div>
 
-    <script src="public/js/bundle.js">
+    <script src="dist/bundle.js">
 
     </script>
   </body>
