--- a/crxapp/index.html
+++ b/crxapp/index.html
@@ -3,15 +3,12 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8 ;">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://onlineerp.solution.quebec 'unsafe-inline' 'unsafe-eval';
-   style-src 'self' maxcdn.bootstrapcdn.com ;
-   img-src 'self' i1.sndcdn.com
-   ">
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' * https: data:">
   <link rel="stylesheet" href="public/css/style.css">
-  <link rel="stylesheet" href="public/bootstrap.min.css">
-  <script src="public/jquery.min.js"></script>
-  <script src="public/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="public/font-awesome.min.css">
+  <link rel="stylesheet" href="public/bootstrap/bootstrap.min.css">
+  <script src="public/js/jquery.min.js"></script>
+  <script src="public/bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="public/fontawesome/css/font-awesome.min.css">
   <title>SoundCloud Player</title>
 </head>
 
